# traditional_bands_email

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  run_script.bat  run_script_server.bat
sql_query/: traditional_bands_shipDate_group.sql  traditional_bands_shipDate_group_2.sql
src/: db_handler.py  email_handler.py  main.py  py_handler.py
